--- a/static/README.ipynb
+++ b/static/README.ipynb
@@ -13,16 +13,20 @@
     "## 目录相关\n",
     "- 默认用户目录均为/home/jovyan\n",
     "- jupyter工作目录为: ~/work\n",
+    "- 只读共享目录为: ~/work/必读\n",
     "- 共享目录为: ~/work/share\n",
     "- **~/work目录会永久保存， 其它目录会随容器重建而丢失，请保存好自己的文件**\n",
+    "- **资源有限，请审慎利用空间**\n",
     "\n",
     "## 环境相关\n",
+    "- 一个用户只能有一个容器，因此切换镜像时需要重建容器，为了保证安全性只有管理员才能杀掉旧容器，因此若需要切换镜像需联系管理员去杀掉旧容器，才能按新镜像新建新容器\n",
+    "- **用户自行安装的包会随容器重建而丢失**，在jupyter工作目录下或在jupyter文件中维护一个包安装文档或脚本是良好的习惯\n",
+    "- **资源有限，请审慎选择合适的镜像**\n",
     "- 环境包含常用工具，用户可自行安装所需pip或npm包；若所需包大量缺失，该考虑换镜像而不是自行安装\n",
-    "- **用户自行安装的包会随容器重建而丢失**，在jupyter工作目录下或在jupyter文件中维护一个包安装文档或脚本是良好的习惯。\n",
     "- 可用镜像有：\n",
-    "    - jupyter/scipy-notebook:3.1.1, 包含常用数据处理、机器学习工具包\n",
-    "    - transformers_notebook, 包含Tensorflow, Keras, Jax and PyTorch等AI工具包\n",
-    "    - 一个用户只能有一个容器，因此切换镜像时需要重建容器，为了保证安全性只有管理员才能杀掉旧容器，因此若需要切换镜像，需联系管理员去杀掉旧容器，才能按新镜像新建新容器\n",
+    "    - mini(干净的python环境)-jupyter/minimal-notebook:hub-3.1.1，包含基础干净的python环境(pip,conda,mamba)和npm环境\n",
+    "    - scipy(pydata环境)-jupyter/scipy-notebook:hub-3.1.1, 包含常用的numpy,pandas,scipy,scikit-learn,matplotlib,seaborn等\n",
+    "    - ai(定制AI环境)-定制镜像, 包含PyTorch,Tensorflow,Jax等AI工具包\n",
     "- 自行安装pip或npm包，建议用国内mirror:\n",
     "    - 安装pip包可如：pip install numpy -i https://pypi.tuna.tsinghua.edu.cn/simple\n",
     "    - 安装npm包可如：npm install -g pnpm --registry=https://registry.npm.taobao.org\n"
